    - You now move Loftar's map around with ctrl + drag, just like the minimap. You can now move on it with just left click
    rather than ctrl + left click. Queued moves are still alt + left click. Icons won't stop alt + left click anymore
    - Loftar's map will now show grid lines when on as well as player's view distance
    - Loftar's map is restricted to 6 zoomlevels, the highest letting you basically see an entire continent in one view
    - Loftar's map will now show ridges. Note that it may take awhile for the other zoom levels to update with ridges..
    - Changed out zoom maps load in from Loftar's map so if the default grid level has updated all the zoommaps that
    depend on it should update as well with the new data. You'll notice your zoom maps load in slightly delayed because
    of this as they have to regenerate.
    - Moved minimap buttons over to Loftar's map
    - Split up Loftar's map into the map and a markers window. You can open the markers window with the flag button at
    the top of the map window or by clicking an item as usual.

3/1/19
    - Can now mark tiles with Alt + right click -> Mark for party

2/28/19
    - Shift+B to toggle hitboxes
    - Fixed bug that made everything dynamic.
    - Making a dynamic object hidden will now make it static like it should and increase performance!
    - Updated text next to "Show Crop Stage" and "Show Gob HP" to remind you it'll be a performance hit. Objects that
    need to show these end up having to be dynamic because of it. In large numbers you'll notice a difference.
    - When you untoggle Stop Animations they will continue to tick in the background, just not update (unless you mouse
    hover). While in this mode they will become static.
        - Note: on hearthfires you may see the name float off because of this.
    - Dead animals or composite gobs should no longer be dynamic when all their poses are done
    - Show animations should almost affect everything now.

2/27/19