@@ -8,7 +8,7 @@
     - You now move Loftar's map around with ctrl + drag, just like the minimap. You can now move on it with just left click
     rather than ctrl + left click. Queued moves are still alt + left click. Icons won't stop alt + left click anymore
     - Loftar's map will now show grid lines when on as well as player's view distance
-    - Loftar's map is restricted to 6 zoomlevels, the highest letting you basically see an entire continent in one view
+    - Loftar's map is restricted to 5 zoomlevels
     - Loftar's map will now show ridges. Note that it may take awhile for the other zoom levels to update with ridges..
     - Changed out zoom maps load in from Loftar's map so if the default grid level has updated all the zoommaps that
     depend on it should update as well with the new data. You'll notice your zoom maps load in slightly delayed because
@@ -16,6 +16,7 @@
     - Moved minimap buttons over to Loftar's map
     - Split up Loftar's map into the map and a markers window. You can open the markers window with the flag button at
     the top of the map window or by clicking an item as usual.
+    - The old minimap no longer exists. Loftar's map can do everything it could and more now.
 
 3/1/19
     - Can now mark tiles with Alt + right click -> Mark for party
